# vulkan-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  LEGAL.md  LICENSE-MIT.md  LICENSE.md  README.md
.github/workflows/: analyze.yml  build.yml  codeql.yml  format.yml
ass/: LICENSE.md  README.md
docs/: dependency_table.md  dependency_table.tgn  index.html
docs/css/: main.css
docs/txt/: LICENSE-MORITZ.txt
src/: main.cpp  main_headless.cpp
src/bindings/: TEMPORARYNAMELIB.i  lua_example.lua  python_example.py
src/include/: TEMPORARYNAME.h  vulkan_interface.hpp
src/scripts/: compile_shaders.py  format.py  generate_bindings.py
src/shaders/: shader_depth.frag  shader_depth.vert
